테트리스 완성

--- a/tetris/css/style.css
+++ b/tetris/css/style.css
@@ -9,14 +9,36 @@ body{
   height: 100%;
   overflow: hidden;
 }
+.game-text {
+  display : none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  left: 0;
+  top: 0;
+  color: #fff;
+  font-size: 50px;
+}
+.game-text > button {
+  padding: 0.5rem 1rem;
+  color: #fff;
+  background: salmon;
+  border: none;
+  cursor : pointer;
+}
 .score {
+  margin-top: 20px;
   text-align: center;
   font-size: 36px;
   margin-bottom: 2rem;
 }
 .playground >ul {
   border: 1px solid #333;
-  width: 250px;
+  width: 370px;
   margin: 0 auto;
 }
 .playground > ul > li {
@@ -32,5 +54,20 @@ body{
   outline: 1px solid #ccc;
 }
 .tree {
-  background: #67c23a;
+  background :rgb(67, 58, 194);
+}
+.bar {
+  background : rgb(167, 58, 194);
+}
+.zee {
+  background : rgb(58, 194, 149);
+}
+.elLeft {
+  background : rgb(233, 16, 142);
+}
+.elRight {
+  background : rgb(245, 218, 68);
+}
+.square {
+  background : rgb(218, 28, 28);
 }
